Linking files together and changing style

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </head>
   <body>
     <head>
-      <div class="jumbotron">
-        <h1 class="display-4 text-center">Stock Prices and Alerts</h1>
+      <div class="bg-dark pt-2 pb-2">
+        <h1 class="display-4 text-center text-white">
+          Stock Prices and Alerts
+        </h1>
       </div>
     </head>
 
@@ -75,6 +77,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
