updating colors and function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <section class="level">
       <div class="level-item center">
         <!-- Search Parameters Panel -->
-        <p class="is-size-4">Search Parameters</p>
       </div>
       <div class="level-item center">
         <label for="search">Ticker Symbol:</label>
@@ -54,7 +53,6 @@
         </button>
       </div>
     </section>
-    <hr />
 
     <!-- Indices container -->
     <section class="section">
@@ -65,7 +63,6 @@
       </div>
     </section>
     <div class="center" id="indices-div"></div>
-    <hr />
 
     <!-- Cryptocurrency container -->
     <section class="section">
@@ -80,8 +77,7 @@
       <!-- Cryptocurrency content -->
     </div>
 
-    <hr />
-
+    <!-- Search Result Modal -->
     <div id="searchResultModal" class="modal">
       <div class="modal-background"></div>
       <div class="modal-card">
