--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <p id="results-close"></p>
             <br />
             <p id="results-volume"></p>
+            <canvas id="myChart"></canvas>
           </div>
         </section>
         <footer class="modal-card-foot">
@@ -105,8 +106,9 @@
         </footer>
       </div>
     </div>
-    <script src="https://cdnjs.com/libraries/Chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
