--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
           Search
         </button>
 
-        <button type="button" class="button is-dark is-rounded">
+        <button
+          onclick="clearInput()"
+          id="clear"
+          type="button"
+          class="button is-dark is-rounded"
+        >
           Clear
         </button>
       </div>
@@ -108,7 +113,13 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- <link
+      rel="stylesheet"
+      href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    /> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/tickers.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
