--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Indices container -->
     <section class="section">
       <div class="notification">
-        <p class="is-size-4">
+        <p class="is-size-3">
           Indices
         </p>
       </div>
@@ -72,7 +72,7 @@
     <!-- Cryptocurrency container -->
     <section class="section">
       <div class="notification">
-        <p class="is-size-4">
+        <p class="is-size-3">
           Cryptocurrencies
         </p>
       </div>
@@ -105,7 +105,7 @@
           </div>
         </section>
         <footer class="modal-card-foot">
-          <button onclick="ToggleResultModal();" class="button is-success">
+          <button onclick="ToggleResultModal();" class="button is-dark">
             Clear
           </button>
         </footer>
