added mobil responsiveness

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </p>
       </div>
     </section>
-    <div class="center" id="indices-div"></div>
+    <div class="columns is-tablet" id="indices-div"></div>
 
     <!-- Cryptocurrency container -->
     <section class="section">
@@ -78,7 +78,7 @@
       </div>
     </section>
 
-    <div class="center" id="cryptos-div">
+    <div class="columns is-tablet" id="cryptos-div">
       <!-- Cryptocurrency content -->
     </div>
 
